# nature-remo-rust

./: Cargo.toml
src/: cloud.rs
src/cloud/: api.rs  get.rs  object.rs  post.rs
src/cloud/get/: appliance.rs  home.rs  invite.rs
src/cloud/object/: appliance_response.rs  home_response.rs
src/cloud/object/appliance_response/: ac_smart_mode.rs  aircon.rs
src/cloud/object/appliance_response/aircon/: range.rs
src/cloud/object/home_response/: location.rs  user.rs
src/cloud/post/: appliance.rs  device.rs  home.rs  signal.rs
