[package]
name = "nature-remo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
url = "2.3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
openapi = { git = "https://github.com/SeitaHigashi/nature-remo-api-object.git" }
